@@ -9,7 +9,9 @@ Coccinella-0.95.12 (0603??):
 
  o new application theme engine
  o systray support on X11 (linux)
-
+ o features on MacOSX: overlay number of received messages in dock;
+   logouts on sleep and power down
+ o status shortcut can be used to login
 
 Coccinella-0.95.11 (060115):
 
